partial implementation of muon-amqp 0.1

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "restify": "*",
         "socket.io": "0.9",
         "socket.io-client": "0.9",
-        "url-template": "*"
+        "url-template": "*",
+        "amqp": "*"
     },
     "devDependencies": {
         "mocha": "*",
