--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "control-plane",
   "description": "Muon bridge to docker api",
-  "version": "12.0.0",
+  "version": "13.0.0-0",
   "scripts": {
     "start": "node app",
     "test": "./node_modules/mocha/bin/mocha -R spec"
