--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muon-core",
   "description": "node.js muon implementation",
-  "version": "18.0.0-0",
+  "version": "18.0.0",
   "scripts": {
     "start": "node app",
     "test": "./node_modules/.bin/mocha --recursive -R xunit-file test/"
