Incremented development version to 21.0.0-0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muon-core",
   "description": "node.js muon implementation",
-  "version": "20.0.0",
+  "version": "21.0.0-0",
   "main": "./muon/muon-core",
   "scripts": {
     "start": "node app",
