--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-    "name": "muon-core",
-    "description": "node.js muon implementation",
-    "version": "21.0.0-0",
-    "author": "Simplicity Itself Ltd",
-    "keywords": [
-      "muon",
-      "microservices",
-      "antifragile"
-    ],
-    "private": false,
-    "repository": {
-      "url": "https://github.com/muoncore/muon-node"
-    },
-    "scripts": {
-        "start": "node app",
-        "test": "./node_modules/.bin/mocha --recursive -R xunit-file test/"
-    },
-    "dependencies": {
-        "underscore": "*",
-        "url": "*",
-        "cors": "*",
-        "node-uuid": "*",
-        "body-parser": "*",
-        "msh": "0.1.9",
-        "restify": "*",
-        "socket.io": "0.9",
-        "socket.io-client": "0.9",
-        "url-template": "*",
-        "amqp": "*"
-    },
-    "devDependencies": {
-        "mocha": "*",
-        "superagent": "*",
-        "assert": "*",
-        "validator": "*",
-        "xunit-file": "*"
-    },
-    "engines": {
-      "node": "*"
-    }
+  "name": "muon-core",
+  "description": "node.js muon implementation",
+  "version": "26.0.0",
+  "author": "Simplicity Itself Ltd",
+  "keywords": [
+    "muon",
+    "microservices",
+    "antifragile"
+  ],
+  "private": false,
+  "repository": {
+    "url": "https://github.com/muoncore/muon-node"
+  },
+  "scripts": {
+    "start": "node app",
+    "test": "./node_modules/.bin/mocha --recursive -R xunit-file test/"
+  },
+  "dependencies": {
+    "underscore": "*",
+    "url": "*",
+    "cors": "*",
+    "node-uuid": "*",
+    "body-parser": "*",
+    "msh": "0.1.9",
+    "restify": "*",
+    "socket.io": "0.9",
+    "socket.io-client": "0.9",
+    "url-template": "*",
+    "amqp": "*"
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "superagent": "*",
+    "assert": "*",
+    "validator": "*",
+    "xunit-file": "*"
+  },
+  "engines": {
+    "node": "*"
+  }
 }
