--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muon-core",
   "description": "node.js muon implementation",
-  "version": "30.0.0",
+  "version": "31.0.0-0",
   "author": "Simplicity Itself Ltd",
   "keywords": [
     "muon",
