--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "winston": "*",
     "colors": "*",
     "callsite": "*",
-    "stack-trace": "*"
+    "stack-trace": "*",
+    "cli":"0.6.5",
+    "daemon":"*"
   },
   "devDependencies": {
     "mocha": "*",
