--- a/package.json
+++ b/package.json
@@ -33,14 +33,17 @@
     "callsite": "*",
     "stack-trace": "*",
     "cli": "0.6.6",
-    "daemon": "*"
+    "daemon": "*",
+    "signals": "*"
   },
   "devDependencies": {
     "mocha": "*",
     "superagent": "*",
     "assert": "*",
     "validator": "*",
-    "xunit-file": "*"
+    "xunit-file": "*",
+    "should": "*",
+    "mocha-sinon":"*"
   },
   "engines": {
     "node": "*"
