--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "*",
     "msh": "0.1.9",
     "restify": "*",
+    "expect.js": "*",
     "socket.io": "0.9",
     "socket.io-client": "0.9",
     "url-template": "*",
@@ -35,6 +36,7 @@
     "cli": "0.6.6",
     "daemon": "*",
     "signals": "*",
+    "assert": "*",
     "sleep": "*"
   },
   "devDependencies": {
