--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "cli": "0.6.6",
     "daemon": "*",
     "signals": "*",
-    "assert": "*",
-    "sleep": "*"
+    "assert": "*"
   },
   "devDependencies": {
     "mocha": "*",
