--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/muoncore/muon-node"
   },
   "scripts": {
-    "start": "node app",
+    "start": "node tck",
+    "tck": "node tck",
     "test": "./node_modules/.bin/mocha --recursive -R xunit-file test/"
   },
   "dependencies": {
