--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "muon-core",
+  "name": "muon",
   "description": "node.js muon implementation",
-  "version": "39.2.0-0",
+  "version": "5.1.0",
   "author": "Simplicity Itself Ltd",
   "keywords": [
     "muon",
