--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "muon",
+  "name": "muon-core",
   "description": "node.js muon implementation",
   "version": "5.1.0",
   "author": "Simplicity Itself Ltd",
