--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muon-core",
   "description": "node.js muon implementation",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "author": "Simplicity Itself Ltd",
   "keywords": [
     "muon",
@@ -56,5 +56,5 @@
   "bin": {
     "muon": "cli.js"
   },
-  "main": "./core/api/muon"
+  "main": "./muon"
 }
