--- a/TCK/muon.config
+++ b/TCK/muon.config
@@ -7,5 +7,8 @@
   },
   "transports": [
     { "type":"amqp", "url":"amqp://muon:microservices@localhost" }
-  ]
+  ],
+  "eventLogger": {
+    "target":"muon://eventstore/events"
+  }
 }
