--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "cors": "*",
     "node-uuid": "*",
     "body-parser": "*",
-    "msh": "0.1.9",
-    "restify": "*",
     "expect.js": "*",
     "url-template": "*",
     "amqp": "*",
@@ -35,6 +33,8 @@
     "callsite": "*",
     "stack-trace": "*",
     "cli": "0.6.6",
+    "rx": "*",
+    "rsvp": "*",
     "daemon": "*",
     "signals": "*",
     "assert": "*",
