fixed channel test

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "underscore": "*",
     "url": "*",
     "cors": "*",
+    "js-csp": "*",
     "node-uuid": "*",
     "body-parser": "*",
     "expect.js": "*",
