--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "stack-trace": "*",
     "cli": "0.6.6",
     "rx": "*",
+    "es6-promise": "*",
     "rsvp": "*",
     "daemon": "*",
     "signals": "*",
