--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "./node_modules/.bin/mocha --recursive -R xunit-file test/"
   },
   "dependencies": {
+    "browserify": "*",
     "console.table": "*",
     "amqplib": "*",
     "split": "*",
