added transport with debug messages

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "amqplib": "*",
     "split": "*",
     "underscore": "*",
+    "async": "*",
     "url": "*",
     "cors": "*",
     "js-csp": "*",
