include message filed regex in validation

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "amqplib": "*",
     "split": "*",
     "underscore": "*",
+    "jsonutil": "*",
     "async": "*",
     "url": "*",
     "cors": "*",
