--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muon-core",
   "description": "node.js muon implementation",
-  "version": "6.0.0",
+  "version": "7.0.1",
   "author": "Simplicity Itself Ltd",
   "keywords": [
     "muon",
@@ -58,6 +58,9 @@
   },
   "engines": {
     "node": "*"
+  },
+  "bin": {
+    "muon": "muon/cli/muon-cli.js"
   },
   "preferGlobal": "true",
 
