pretty formatting for discovery services

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "joi": "*",
     "stack-trace": "*",
     "sexylog": "*",
+    "string-format": "*",
     "async-rq": "*"
   },
   "devDependencies": {
