added missing dep

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browserify": "*",
     "console.table": "*",
     "amqplib": "*",
+    "amqp": "*",
     "split": "*",
     "underscore": "*",
     "jsonutil": "*",
