--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "callsite": "*",
     "stack-trace": "*",
     "cli": "0.6.6",
+    "cli-table": "*",
     "rx": "*",
     "es6-promise": "*",
     "rsvp": "*",
