added keep alive to muon socket agent

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonutil": "*",
     "async": "*",
     "url": "*",
+    "moment": "*",
     "cors": "*",
     "js-csp": "*",
     "node-uuid": "*",
