--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "validator": "*",
     "xunit-file": "*",
     "should": "*",
-    "mocha-sinon": "*"
+    "mocha-sinon": "*",
+    "mocha-teamcity-reporter": "*"
   },
   "engines": {
     "node": "*"
