run as root to enable global link during the install

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,10 @@ services:
       - "15672:15672"
 
   nodetests:
-    build: .
+    build:
+      context: .
+      args:
+        user: root
     links:
       - rabbitmq
     environment:
