--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "./node_modules/.bin/mocha --recursive -R xunit-file test/"
   },
   "dependencies": {
+    "pako": "1.0.3",
     "browserify": "13.1.0",
     "console.table": "0.7.0",
     "amqplib": "0.4.2",
