chore(package): update uuid to version 3.0.0

--- a/package.json
+++ b/package.json
@@ -18,37 +18,37 @@
     "test": "./node_modules/.bin/mocha --recursive -R xunit-file test/"
   },
   "dependencies": {
-    "pako": "1.0.3",
-    "console.table": "0.7.0",
-    "amqplib": "0.4.2",
     "amqp": "0.2.6",
-    "split": "1.0.0",
-    "underscore": "1.8.3",
-    "jsonutil": "0.2.0",
+    "amqplib": "0.4.2",
+    "assert": "1.4.1",
     "async": "2.0.1",
-    "url": "0.11.0",
-    "moment": "2.14.1",
-    "cors": "2.8.0",
-    "js-csp": "0.6.5",
-    "node-uuid": "1.4.7",
+    "async-rq": "0.0.1",
     "body-parser": "1.15.2",
-    "expect.js": "0.3.1",
-    "url-template": "2.0.8",
-    "colors": "1.1.2",
     "callsite": "1.0.0",
-    "stack-trace": "0.0.9",
     "cli": "0.6.6",
     "cli-table": "0.3.1",
-    "rx": "4.1.0",
-    "es6-promise": "3.2.1",
-    "rsvp": "3.2.1",
+    "colors": "1.1.2",
+    "console.table": "0.7.0",
+    "cors": "2.8.0",
     "daemon": "1.1.0",
-    "signals": "1.0.0",
-    "assert": "1.4.1",
+    "es6-promise": "3.2.1",
+    "expect.js": "0.3.1",
     "joi": "9.0.4",
+    "js-csp": "0.6.5",
+    "jsonutil": "0.2.0",
+    "moment": "2.14.1",
+    "pako": "1.0.3",
+    "rsvp": "3.2.1",
+    "rx": "4.1.0",
     "sexylog": "0.0.3",
+    "signals": "1.0.0",
+    "split": "1.0.0",
+    "stack-trace": "0.0.9",
     "string-format": "0.5.0",
-    "async-rq": "0.0.1"
+    "underscore": "1.8.3",
+    "url": "0.11.0",
+    "url-template": "2.0.8",
+    "uuid": "^3.0.0"
   },
   "devDependencies": {
     "browserify": "13.1.0",
