--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "muon-core",
   "description": "node.js muon implementation",
-  "version": "7.1.7",
+  "version": "7.1.8",
   "author": "Muon Core Ltd",
   "keywords": [
     "muon",
@@ -15,7 +15,8 @@
   "scripts": {
     "start": "node tck",
     "tck": "node tck",
-    "test": "./node_modules/.bin/mocha --recursive -R xunit-file test/"
+    "test": "./node_modules/.bin/mocha --recursive -R xunit-file test/",
+    "build": "babel muon --presets babel-preset-es2015 --out-dir distribution"
   },
   "dependencies": {
     "pako": "1.0.3",
@@ -51,21 +52,23 @@
     "async-rq": "0.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
     "browserify": "13.1.0",
     "mocha": "2.5.3",
-    "superagent": "2.2.0",
-    "validator": "5.5.0",
-    "xunit-file": "1.0.0",
-    "should": "11.1.0",
-    "sinon": "1.17.5",
+    "mocha-multi": "0.9.1",
     "mocha-sinon": "1.1.5",
     "mocha-teamcity-reporter": "1.1.1",
-    "mocha-multi": "0.9.1"
+    "should": "11.1.0",
+    "sinon": "1.17.5",
+    "superagent": "2.2.0",
+    "validator": "5.5.0",
+    "xunit-file": "1.0.0"
   },
   "engines": {
     "node": "*"
   },
   "license": "Apache-2.0",
   "preferGlobal": "false",
-  "main": "./muon/api/muoncore"
+  "main": "./distribution/api/muoncore"
 }
