--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   "engines": {
     "node": "*"
   },
-  "license": "Apache-2.0",
+  "license": "AGPLv2",
   "preferGlobal": "false",
   "main": "./distribution/api/muoncore"
 }
