--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "build": "babel muon --presets babel-preset-es2015 --out-dir distribution"
   },
   "dependencies": {
-    "amqp": "0.2.6",
-    "amqplib": "0.4.2",
     "assert": "1.4.1",
     "async": "2.0.1",
     "async-rq": "0.0.1",
@@ -61,6 +59,7 @@
     "mocha-multi": "0.9.1",
     "mocha-sinon": "1.1.5",
     "mocha-teamcity-reporter": "1.1.1",
+    "muon-stack-rpc": "0.0.2-4",
     "should": "11.1.0",
     "sinon": "1.17.5",
     "superagent": "2.2.0",
